--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-## Ignore UI State XML so it doesnt conflicts with users
-.uistate.xml
+## Construct 2 ##
+
+# Construct 2 User Interface
+*.uistate.xml
+
+# Temporary files
+*.capx.backup1*
+*.capx.autosave*
